# rust-subprocess

./: .travis.yml  Cargo.toml  MIGRATING.md  MIGRATION.md  README.md
.github/workflows/: ci.yml
examples/: capture_output.rs  communicate.rs  detached.rs  environment.rs  exit_status.rs  pipeline.rs  redirect_file.rs  sample.rs  signals_unix.rs  stdin_feed.rs  streaming.rs  timeout.rs  working_dir.rs
src/: build.rs  builder.rs  common.rs  communicate.rs  debug.rs  exec.rs  job.rs  lib.rs  os_common.rs  pipeline.rs  popen.rs  popt.rs  posix.rs  process.rs  run.rs  spawn.rs  win32.rs
src/subprocess/: common.rs  popen.rs  posix.rs  win32.rs
src/tests/: build.rs  builder.rs  common.rs  communicate.rs  exec.rs  job.rs  mod.rs  pipeline.rs  popen.rs  posix.rs  run.rs  started.rs  win32.rs
tests/: escape-args.rs  weird-args.rs
