[package]
name = "subprocess"
version = "0.1.16"
authors = ["Hrvoje Nikšić <hniksic@gmail.com>"]
readme = "README.md"
keywords = ["execute", "process", "command", "redirect", "pipe"]
license = "Apache-2.0/MIT"
repository = "https://github.com/hniksic/rust-subprocess"
documentation = "https://docs.rs/subprocess/"
description = """
Execution of child processes and pipelines, inspired by Python's subprocess
module, with Rust-specific extensions.
"""

[dependencies]
libc = "0.2.43"

[target.'cfg(windows)'.dependencies]
crossbeam-utils = "0.5"
winapi = { version = "0.3.6", features = ["handleapi", "namedpipeapi", "processenv", "synchapi"] }

[dev-dependencies]
tempdir = "0.3.7"

[lib]
name = "subprocess"
path = "src/lib.rs"
