[package]
name = "subprocess"
version = "1.0.0"
authors = ["Hrvoje Nikšić <hniksic@gmail.com>"]
readme = "README.md"
keywords = ["execute", "process", "command", "redirect", "pipe"]
license = "Apache-2.0/MIT"
repository = "https://github.com/hniksic/rust-subprocess"
documentation = "https://docs.rs/subprocess/"
description = """
Execution and control of child processes and pipelines.
"""
edition = "2024"

[target.'cfg(unix)'.dependencies]
libc = "0.2.78"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.8", features = ["std", "handleapi", "namedpipeapi", "processenv", "synchapi", "winerror", "processthreadsapi", "winbase", "fileapi", "minwinbase", "ioapiset"] }

[dev-dependencies]
tempfile = "3.3.0"

[lib]
name = "subprocess"
path = "src/lib.rs"
